# LaneChangerHOVTester

./: README.md  main-reward-playground.py  main-reward-visualizer.py  main-stock.py  main-trainer.py  main-ttc-playground.py  main-ttcreward-visualizer.py  main-viewer.py  main.py  main_sim.py  main_trial.py  pyproject.toml
.github/: copilot-instructions.md
configs/: configs.py  params_main.yaml  simenv_params.yaml
document/: main.aux  main.tex  main.toc
runs/merge_exit_highway__configs__1__1780917035/: events.out.tfevents.1780917035.gabrielalteza.592374.0
runs/merge_exit_highway__configs__1__1780917077/: events.out.tfevents.1780917077.gabrielalteza.592494.0
runs/merge_exit_highway__configs__1__1780919302/: events.out.tfevents.1780919302.gabrielalteza.592982.0
runs/merge_exit_highway__configs__1__1780919429/: events.out.tfevents.1780919429.gabrielalteza.593279.0
runs/merge_exit_highway__configs__1__1780920023/: events.out.tfevents.1780920023.gabrielalteza.593753.0
runs/merge_exit_highway__configs__1__1780920294/: events.out.tfevents.1780920294.gabrielalteza.593863.0
runs/merge_exit_highway__configs__1__1780920468/: events.out.tfevents.1780920468.gabrielalteza.594002.0
runs/merge_exit_highway__configs__1__1780920611/: events.out.tfevents.1780920611.gabrielalteza.594207.0
runs/merge_exit_highway__configs__1__1780920626/: events.out.tfevents.1780920626.gabrielalteza.594304.0
runs/merge_exit_highway__configs__1__1780921081/: events.out.tfevents.1780921081.gabrielalteza.594436.0
runs/merge_exit_highway__configs__1__1781684261/: checkpoint_actor_0.pth  (+1 more)
(+1114 files in other folders)
