[project]
name = "lanechangerhovtester"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "bayesian-optimization>=3.2.0",
    "do-mpc>=5.1.1",
    "gymnasium>=1.2.3",
    "highway-env>=1.10.2",
    "matplotlib>=3.10.8",
    "numpy>=2.4.2",
    "pandas>=3.0.1",
    "pettingzoo>=1.25.0",
    "pyyaml>=6.0.3",
    "tianshou>=2.0.0",
    "torch>=2.10.0",
    "tqdm>=4.67.3",
]
                       